[package]
name = "sled-expolorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1"
async-trait = "^0.1"
derive_more = { version = "^1", features = ["full"] }
once_cell = "^1"
cfg-if = "^1"

base64 = "^0.22"
bytes = "^1"
percent-encoding = "^2"
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }

futures = "^0.3"
oneshot = "^0.1"
flume = "^0.11"

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
toml = "^0.8"
ron = "^0.8"
postcard = { version = "^1", features = ["alloc"] }
strum = { version = "^0.26", features = ["derive"] }
uuid = { version = "^1", features = [
    'v4',
    'fast-rng',
    'macro-diagnostics',
    'serde',
] }

log = "^0.4"
env_logger = "^0.11"

sled = "^0.34"
eframe = "^0.29"
egui = "^0.29"
egui_extras = { version = "^0.26", features = ["all_loaders"] }
image = { version = "^0.25", features = ["png"] }
